# BADTestTask

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
BracedException/: BracedException.hpp
ErrorCodeStrings/: ErrorCodes.cpp  ErrorCodes.hpp
FileReader/: ReaderFunctions.cpp  ReaderFunctions.hpp  ReaderFunctions.inl
Graph/: Graph.hpp  Graph.inl
Vertex/: Vertex.hpp  Vertex.inl
